parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    NOT

Grammar

Rule 0     S' -> routine
Rule 1     routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET
Rule 2     global_scope_init -> <empty>
Rule 3     local_scope_init -> <empty>
Rule 4     var_declarations -> VAR simple_declaration var_declarations
Rule 5     var_declarations -> VAR array_declaration var_declarations
Rule 6     var_declarations -> VAR matrix_declaration var_declarations
Rule 7     var_declarations -> empty
Rule 8     simple_declaration -> ID COLON var_type SEMICOLON
Rule 9     array_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON
Rule 10    matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON
Rule 11    var_type -> type
Rule 12    var_type -> DF
Rule 13    function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
Rule 14    function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations
Rule 15    function_declarations -> empty
Rule 16    proc_scope_init -> <empty>
Rule 17    return -> RETURN expression
Rule 18    func_type -> type
Rule 19    func_type -> VOID
Rule 20    params0 -> param params1
Rule 21    params0 -> empty
Rule 22    params1 -> COMMA param params1
Rule 23    params1 -> empty
Rule 24    param -> ID COLON type
Rule 25    statements -> write SEMICOLON statements
Rule 26    statements -> read SEMICOLON statements
Rule 27    statements -> var_assignment SEMICOLON statements
Rule 28    statements -> condition SEMICOLON statements
Rule 29    statements -> loop SEMICOLON statements
Rule 30    statements -> function_call SEMICOLON statements
Rule 31    statements -> special_function_call SEMICOLON statements
Rule 32    statements -> empty
Rule 33    write -> WRITE write_params0
Rule 34    write_params0 -> expression write_params1
Rule 35    write_params0 -> CONST_TEXT write_params1
Rule 36    write_params1 -> COMMA expression write_params1
Rule 37    write_params1 -> COMMA CONST_TEXT write_params1
Rule 38    write_params1 -> empty
Rule 39    read -> READ ID
Rule 40    var_assignment -> simple_assignment
Rule 41    var_assignment -> array_assignment
Rule 42    var_assignment -> matrix_assignment
Rule 43    simple_assignment -> ID ASSIGN push_operator expression
Rule 44    array_assignment -> ID LSQBRACKET expression RSQBRACKET ASSIGN expression
Rule 45    matrix_assignment -> ID LSQBRACKET expression RSQBRACKET LSQBRACKET expression RSQBRACKET ASSIGN expression
Rule 46    condition -> IF LPAREN hyper_expression RPAREN LBRACKET statements RBRACKET
Rule 47    condition -> IF LPAREN hyper_expression RPAREN LBRACKET statements RBRACKET ELSE LBRACKET statements RBRACKET
Rule 48    loop -> REPEAT LPAREN hyper_expression RPAREN LBRACKET statements RBRACKET
Rule 49    function_call -> ID LPAREN call_params0 RPAREN
Rule 50    call_params0 -> expression call_params1
Rule 51    call_params0 -> empty
Rule 52    call_params1 -> COMMA expression call_params1
Rule 53    call_params1 -> empty
Rule 54    special_function_call -> MEAN LPAREN call_params0 RPAREN
Rule 55    special_function_call -> MEDIAN LPAREN call_params0 RPAREN
Rule 56    special_function_call -> MODE LPAREN call_params0 RPAREN
Rule 57    special_function_call -> STD LPAREN call_params0 RPAREN
Rule 58    special_function_call -> KURTOSIS LPAREN call_params0 RPAREN
Rule 59    special_function_call -> PLOT LPAREN call_params0 RPAREN
Rule 60    special_function_call -> DPLOT LPAREN call_params0 RPAREN
Rule 61    special_function_call -> VARIANCE LPAREN call_params0 RPAREN
Rule 62    special_function_call -> SIMMETRY LPAREN call_params0 RPAREN
Rule 63    special_function_call -> CORRELATION LPAREN call_params0 RPAREN
Rule 64    special_function_call -> DFREAD LPAREN CONST_TEXT RPAREN
Rule 65    special_function_call -> HOMERO
Rule 66    special_function_call -> MARGE
Rule 67    hyper_expression -> hyper_expression AND push_operator hyper_expression
Rule 68    hyper_expression -> hyper_expression OR push_operator hyper_expression
Rule 69    hyper_expression -> super_expression
Rule 70    super_expression -> super_expression LTHAN push_operator super_expression
Rule 71    super_expression -> super_expression GTHAN push_operator super_expression
Rule 72    super_expression -> super_expression EQUAL push_operator super_expression
Rule 73    super_expression -> super_expression DIFFERENT super_expression
Rule 74    super_expression -> expression
Rule 75    expression -> expression ADD push_operator expression
Rule 76    expression -> expression SUB push_operator expression
Rule 77    expression -> term
Rule 78    term -> term MUL push_operator term
Rule 79    term -> term DIV push_operator term
Rule 80    term -> factor
Rule 81    push_operator -> <empty>
Rule 82    factor -> identifier
Rule 83    factor -> const_int
Rule 84    factor -> const_float
Rule 85    factor -> LPAREN push_cap expression RPAREN pop_cap
Rule 86    factor -> array_access
Rule 87    factor -> matrix_access
Rule 88    factor -> function_call
Rule 89    factor -> special_function_call
Rule 90    identifier -> ID
Rule 91    const_int -> CONST_INT
Rule 92    const_float -> CONST_FLOAT
Rule 93    push_cap -> <empty>
Rule 94    pop_cap -> <empty>
Rule 95    array_access -> ID LSQBRACKET expression RSQBRACKET
Rule 96    matrix_access -> ID LSQBRACKET expression RSQBRACKET LSQBRACKET expression RSQBRACKET
Rule 97    type -> INT
Rule 98    type -> FLOAT
Rule 99    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 75
AND                  : 67
ASSIGN               : 43 44 45
BEGIN                : 1
COLON                : 1 1 1 1 1 8 9 10 13 13 13 14 14 14 24
COMMA                : 22 36 37 52
CONST_FLOAT          : 92
CONST_INT            : 9 10 10 91
CONST_TEXT           : 35 37 64
CORRELATION          : 63
DF                   : 12
DFREAD               : 64
DIFFERENT            : 73
DIV                  : 79
DOT                  : 
DPLOT                : 60
ELSE                 : 47
EQUAL                : 72
FLOAT                : 98
GLOBALS              : 1
GTHAN                : 71
HOMERO               : 65
ID                   : 1 8 9 10 13 14 24 39 43 44 45 49 90 95 96
IF                   : 46 47
INSTRUCTIONS         : 1 13 14
INT                  : 97
KURTOSIS             : 58
LBRACKET             : 13 14 46 47 47 48
LOCALS               : 1 13 14
LPAREN               : 13 14 46 47 48 49 54 55 56 57 58 59 60 61 62 63 64 85
LSQBRACKET           : 1 9 10 10 44 45 45 95 96 96
LTHAN                : 70
MARGE                : 66
MEAN                 : 54
MEDIAN               : 55
MODE                 : 56
MUL                  : 78
NOT                  : 
OR                   : 68
PLOT                 : 59
PROC                 : 13 14
PROCEDURES           : 1
RBRACKET             : 13 14 46 47 47 48
READ                 : 39
REPEAT               : 48
RETURN               : 17
ROUTINE              : 1
RPAREN               : 13 14 46 47 48 49 54 55 56 57 58 59 60 61 62 63 64 85
RSQBRACKET           : 1 9 10 10 44 45 45 95 96 96
SEMICOLON            : 1 8 9 10 14 25 26 27 28 29 30 31
SIMMETRY             : 62
STD                  : 57
SUB                  : 76
VAR                  : 4 5 6
VARIANCE             : 61
VOID                 : 19
WRITE                : 33
error                : 

Nonterminals, with rules where they appear

array_access         : 86
array_assignment     : 41
array_declaration    : 5
call_params0         : 49 54 55 56 57 58 59 60 61 62 63
call_params1         : 50 52
condition            : 28
const_float          : 84
const_int            : 83
empty                : 7 15 21 23 32 38 51 53
expression           : 17 34 36 43 44 44 45 45 45 50 52 74 75 75 76 76 85 95 96 96
factor               : 80
func_type            : 13 14
function_call        : 30 88
function_declarations : 1 13 14
global_scope_init    : 1
hyper_expression     : 46 47 48 67 67 68 68
identifier           : 82
local_scope_init     : 1
loop                 : 29
matrix_access        : 87
matrix_assignment    : 42
matrix_declaration   : 6
param                : 20 22
params0              : 13 14
params1              : 20 22
pop_cap              : 85
proc_scope_init      : 13 14
push_cap             : 85
push_operator        : 43 67 68 70 71 72 75 76 78 79
read                 : 26
return               : 14
routine              : 0
simple_assignment    : 40
simple_declaration   : 4
special_function_call : 31 89
statements           : 1 13 14 25 26 27 28 29 30 31 46 47 47 48
super_expression     : 69 70 70 71 71 72 72 73 73
term                 : 77 78 78 79 79
type                 : 9 10 11 18 24
var_assignment       : 27
var_declarations     : 1 1 4 5 6 13 14
var_type             : 8
write                : 25
write_params0        : 33
write_params1        : 34 35 36 37

Parsing method: LALR

state 0

    (0) S' -> . routine
    (1) routine -> . ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    ROUTINE         shift and go to state 2

    routine                        shift and go to state 1

state 1

    (0) S' -> routine .



state 2

    (1) routine -> ROUTINE . ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    ID              shift and go to state 3


state 3

    (1) routine -> ROUTINE ID . SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    SEMICOLON       shift and go to state 4


state 4

    (1) routine -> ROUTINE ID SEMICOLON . GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    GLOBALS         shift and go to state 5


state 5

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS . COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    COLON           shift and go to state 6


state 6

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON . global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET
    (2) global_scope_init -> .

    VAR             reduce using rule 2 (global_scope_init -> .)
    PROCEDURES      reduce using rule 2 (global_scope_init -> .)

    global_scope_init              shift and go to state 7

state 7

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init . var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET
    (4) var_declarations -> . VAR simple_declaration var_declarations
    (5) var_declarations -> . VAR array_declaration var_declarations
    (6) var_declarations -> . VAR matrix_declaration var_declarations
    (7) var_declarations -> . empty
    (99) empty -> .

    VAR             shift and go to state 9
    PROCEDURES      reduce using rule 99 (empty -> .)

    var_declarations               shift and go to state 8
    empty                          shift and go to state 10

state 8

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations . PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    PROCEDURES      shift and go to state 11


state 9

    (4) var_declarations -> VAR . simple_declaration var_declarations
    (5) var_declarations -> VAR . array_declaration var_declarations
    (6) var_declarations -> VAR . matrix_declaration var_declarations
    (8) simple_declaration -> . ID COLON var_type SEMICOLON
    (9) array_declaration -> . ID LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON
    (10) matrix_declaration -> . ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON

    ID              shift and go to state 15

    simple_declaration             shift and go to state 12
    array_declaration              shift and go to state 13
    matrix_declaration             shift and go to state 14

state 10

    (7) var_declarations -> empty .

    PROCEDURES      reduce using rule 7 (var_declarations -> empty .)
    INSTRUCTIONS    reduce using rule 7 (var_declarations -> empty .)


state 11

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES . COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    COLON           shift and go to state 16


state 12

    (4) var_declarations -> VAR simple_declaration . var_declarations
    (4) var_declarations -> . VAR simple_declaration var_declarations
    (5) var_declarations -> . VAR array_declaration var_declarations
    (6) var_declarations -> . VAR matrix_declaration var_declarations
    (7) var_declarations -> . empty
    (99) empty -> .

    VAR             shift and go to state 9
    PROCEDURES      reduce using rule 99 (empty -> .)
    INSTRUCTIONS    reduce using rule 99 (empty -> .)

    var_declarations               shift and go to state 17
    empty                          shift and go to state 10

state 13

    (5) var_declarations -> VAR array_declaration . var_declarations
    (4) var_declarations -> . VAR simple_declaration var_declarations
    (5) var_declarations -> . VAR array_declaration var_declarations
    (6) var_declarations -> . VAR matrix_declaration var_declarations
    (7) var_declarations -> . empty
    (99) empty -> .

    VAR             shift and go to state 9
    PROCEDURES      reduce using rule 99 (empty -> .)
    INSTRUCTIONS    reduce using rule 99 (empty -> .)

    var_declarations               shift and go to state 18
    empty                          shift and go to state 10

state 14

    (6) var_declarations -> VAR matrix_declaration . var_declarations
    (4) var_declarations -> . VAR simple_declaration var_declarations
    (5) var_declarations -> . VAR array_declaration var_declarations
    (6) var_declarations -> . VAR matrix_declaration var_declarations
    (7) var_declarations -> . empty
    (99) empty -> .

    VAR             shift and go to state 9
    PROCEDURES      reduce using rule 99 (empty -> .)
    INSTRUCTIONS    reduce using rule 99 (empty -> .)

    var_declarations               shift and go to state 19
    empty                          shift and go to state 10

state 15

    (8) simple_declaration -> ID . COLON var_type SEMICOLON
    (9) array_declaration -> ID . LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON
    (10) matrix_declaration -> ID . LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON

    COLON           shift and go to state 20
    LSQBRACKET      shift and go to state 21


state 16

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON . function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET
    (13) function_declarations -> . PROC ID proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> . PROC ID proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations
    (15) function_declarations -> . empty
    (99) empty -> .

    PROC            shift and go to state 23
    BEGIN           reduce using rule 99 (empty -> .)

    function_declarations          shift and go to state 22
    empty                          shift and go to state 24

state 17

    (4) var_declarations -> VAR simple_declaration var_declarations .

    PROCEDURES      reduce using rule 4 (var_declarations -> VAR simple_declaration var_declarations .)
    INSTRUCTIONS    reduce using rule 4 (var_declarations -> VAR simple_declaration var_declarations .)


state 18

    (5) var_declarations -> VAR array_declaration var_declarations .

    PROCEDURES      reduce using rule 5 (var_declarations -> VAR array_declaration var_declarations .)
    INSTRUCTIONS    reduce using rule 5 (var_declarations -> VAR array_declaration var_declarations .)


state 19

    (6) var_declarations -> VAR matrix_declaration var_declarations .

    PROCEDURES      reduce using rule 6 (var_declarations -> VAR matrix_declaration var_declarations .)
    INSTRUCTIONS    reduce using rule 6 (var_declarations -> VAR matrix_declaration var_declarations .)


state 20

    (8) simple_declaration -> ID COLON . var_type SEMICOLON
    (11) var_type -> . type
    (12) var_type -> . DF
    (97) type -> . INT
    (98) type -> . FLOAT

    DF              shift and go to state 27
    INT             shift and go to state 28
    FLOAT           shift and go to state 29

    var_type                       shift and go to state 25
    type                           shift and go to state 26

state 21

    (9) array_declaration -> ID LSQBRACKET . CONST_INT RSQBRACKET COLON type SEMICOLON
    (10) matrix_declaration -> ID LSQBRACKET . CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON

    CONST_INT       shift and go to state 30


state 22

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations . BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    BEGIN           shift and go to state 31


state 23

    (13) function_declarations -> PROC . ID proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> PROC . ID proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations

    ID              shift and go to state 32


state 24

    (15) function_declarations -> empty .

    BEGIN           reduce using rule 15 (function_declarations -> empty .)


state 25

    (8) simple_declaration -> ID COLON var_type . SEMICOLON

    SEMICOLON       shift and go to state 33


state 26

    (11) var_type -> type .

    SEMICOLON       reduce using rule 11 (var_type -> type .)


state 27

    (12) var_type -> DF .

    SEMICOLON       reduce using rule 12 (var_type -> DF .)


state 28

    (97) type -> INT .

    SEMICOLON       reduce using rule 97 (type -> INT .)
    COMMA           reduce using rule 97 (type -> INT .)
    RPAREN          reduce using rule 97 (type -> INT .)
    LBRACKET        reduce using rule 97 (type -> INT .)


state 29

    (98) type -> FLOAT .

    SEMICOLON       reduce using rule 98 (type -> FLOAT .)
    COMMA           reduce using rule 98 (type -> FLOAT .)
    RPAREN          reduce using rule 98 (type -> FLOAT .)
    LBRACKET        reduce using rule 98 (type -> FLOAT .)


state 30

    (9) array_declaration -> ID LSQBRACKET CONST_INT . RSQBRACKET COLON type SEMICOLON
    (10) matrix_declaration -> ID LSQBRACKET CONST_INT . RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON

    RSQBRACKET      shift and go to state 34


state 31

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN . COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    COLON           shift and go to state 35


state 32

    (13) function_declarations -> PROC ID . proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> PROC ID . proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations
    (16) proc_scope_init -> .

    LPAREN          reduce using rule 16 (proc_scope_init -> .)

    proc_scope_init                shift and go to state 36

state 33

    (8) simple_declaration -> ID COLON var_type SEMICOLON .

    VAR             reduce using rule 8 (simple_declaration -> ID COLON var_type SEMICOLON .)
    PROCEDURES      reduce using rule 8 (simple_declaration -> ID COLON var_type SEMICOLON .)
    INSTRUCTIONS    reduce using rule 8 (simple_declaration -> ID COLON var_type SEMICOLON .)


state 34

    (9) array_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET . COLON type SEMICOLON
    (10) matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET . LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON

    COLON           shift and go to state 38
    LSQBRACKET      shift and go to state 37


state 35

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON . LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    LSQBRACKET      shift and go to state 39


state 36

    (13) function_declarations -> PROC ID proc_scope_init . LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> PROC ID proc_scope_init . LPAREN params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations

    LPAREN          shift and go to state 40


state 37

    (10) matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET . CONST_INT RSQBRACKET COLON type SEMICOLON

    CONST_INT       shift and go to state 41


state 38

    (9) array_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET COLON . type SEMICOLON
    (97) type -> . INT
    (98) type -> . FLOAT

    INT             shift and go to state 28
    FLOAT           shift and go to state 29

    type                           shift and go to state 42

state 39

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET . LOCALS COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    LOCALS          shift and go to state 43


state 40

    (13) function_declarations -> PROC ID proc_scope_init LPAREN . params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> PROC ID proc_scope_init LPAREN . params0 RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations
    (20) params0 -> . param params1
    (21) params0 -> . empty
    (24) param -> . ID COLON type
    (99) empty -> .

    ID              shift and go to state 44
    RPAREN          reduce using rule 99 (empty -> .)

    params0                        shift and go to state 45
    param                          shift and go to state 46
    empty                          shift and go to state 47

state 41

    (10) matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT . RSQBRACKET COLON type SEMICOLON

    RSQBRACKET      shift and go to state 48


state 42

    (9) array_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET COLON type . SEMICOLON

    SEMICOLON       shift and go to state 49


state 43

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS . COLON local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET

    COLON           shift and go to state 50


state 44

    (24) param -> ID . COLON type

    COLON           shift and go to state 51


state 45

    (13) function_declarations -> PROC ID proc_scope_init LPAREN params0 . RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> PROC ID proc_scope_init LPAREN params0 . RPAREN COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations

    RPAREN          shift and go to state 52


state 46

    (20) params0 -> param . params1
    (22) params1 -> . COMMA param params1
    (23) params1 -> . empty
    (99) empty -> .

    COMMA           shift and go to state 54
    RPAREN          reduce using rule 99 (empty -> .)

    params1                        shift and go to state 53
    empty                          shift and go to state 55

state 47

    (21) params0 -> empty .

    RPAREN          reduce using rule 21 (params0 -> empty .)


state 48

    (10) matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET . COLON type SEMICOLON

    COLON           shift and go to state 56


state 49

    (9) array_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON .

    VAR             reduce using rule 9 (array_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON .)
    PROCEDURES      reduce using rule 9 (array_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON .)
    INSTRUCTIONS    reduce using rule 9 (array_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON .)


state 50

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON . local_scope_init var_declarations INSTRUCTIONS COLON statements RSQBRACKET
    (3) local_scope_init -> .

    VAR             reduce using rule 3 (local_scope_init -> .)
    INSTRUCTIONS    reduce using rule 3 (local_scope_init -> .)

    local_scope_init               shift and go to state 57

state 51

    (24) param -> ID COLON . type
    (97) type -> . INT
    (98) type -> . FLOAT

    INT             shift and go to state 28
    FLOAT           shift and go to state 29

    type                           shift and go to state 58

state 52

    (13) function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN . COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN . COLON func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations

    COLON           shift and go to state 59


state 53

    (20) params0 -> param params1 .

    RPAREN          reduce using rule 20 (params0 -> param params1 .)


state 54

    (22) params1 -> COMMA . param params1
    (24) param -> . ID COLON type

    ID              shift and go to state 44

    param                          shift and go to state 60

state 55

    (23) params1 -> empty .

    RPAREN          reduce using rule 23 (params1 -> empty .)


state 56

    (10) matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON . type SEMICOLON
    (97) type -> . INT
    (98) type -> . FLOAT

    INT             shift and go to state 28
    FLOAT           shift and go to state 29

    type                           shift and go to state 61

state 57

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init . var_declarations INSTRUCTIONS COLON statements RSQBRACKET
    (4) var_declarations -> . VAR simple_declaration var_declarations
    (5) var_declarations -> . VAR array_declaration var_declarations
    (6) var_declarations -> . VAR matrix_declaration var_declarations
    (7) var_declarations -> . empty
    (99) empty -> .

    VAR             shift and go to state 9
    INSTRUCTIONS    reduce using rule 99 (empty -> .)

    var_declarations               shift and go to state 62
    empty                          shift and go to state 10

state 58

    (24) param -> ID COLON type .

    COMMA           reduce using rule 24 (param -> ID COLON type .)
    RPAREN          reduce using rule 24 (param -> ID COLON type .)


state 59

    (13) function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN COLON . func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN COLON . func_type LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations
    (18) func_type -> . type
    (19) func_type -> . VOID
    (97) type -> . INT
    (98) type -> . FLOAT

    VOID            shift and go to state 65
    INT             shift and go to state 28
    FLOAT           shift and go to state 29

    func_type                      shift and go to state 63
    type                           shift and go to state 64

state 60

    (22) params1 -> COMMA param . params1
    (22) params1 -> . COMMA param params1
    (23) params1 -> . empty
    (99) empty -> .

    COMMA           shift and go to state 54
    RPAREN          reduce using rule 99 (empty -> .)

    params1                        shift and go to state 66
    empty                          shift and go to state 55

state 61

    (10) matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type . SEMICOLON

    SEMICOLON       shift and go to state 67


state 62

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations . INSTRUCTIONS COLON statements RSQBRACKET

    INSTRUCTIONS    shift and go to state 68


state 63

    (13) function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN COLON func_type . LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN COLON func_type . LBRACKET LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations

    LBRACKET        shift and go to state 69


state 64

    (18) func_type -> type .

    LBRACKET        reduce using rule 18 (func_type -> type .)


state 65

    (19) func_type -> VOID .

    LBRACKET        reduce using rule 19 (func_type -> VOID .)


state 66

    (22) params1 -> COMMA param params1 .

    RPAREN          reduce using rule 22 (params1 -> COMMA param params1 .)


state 67

    (10) matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON .

    VAR             reduce using rule 10 (matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON .)
    PROCEDURES      reduce using rule 10 (matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON .)
    INSTRUCTIONS    reduce using rule 10 (matrix_declaration -> ID LSQBRACKET CONST_INT RSQBRACKET LSQBRACKET CONST_INT RSQBRACKET COLON type SEMICOLON .)


state 68

    (1) routine -> ROUTINE ID SEMICOLON GLOBALS COLON global_scope_init var_declarations PROCEDURES COLON function_declarations BEGIN COLON LSQBRACKET LOCALS COLON local_scope_init var_declarations INSTRUCTIONS . COLON statements RSQBRACKET

    COLON           shift and go to state 70


state 69

    (13) function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET . LOCALS COLON var_declarations INSTRUCTIONS COLON statements RBRACKET function_declarations
    (14) function_declarations -> PROC ID proc_scope_init LPAREN params0 RPAREN COLON func_type LBRACKET . LOCALS COLON var_declarations INSTRUCTIONS COLON statements return SEMICOLON RBRACKET function_declarations

    LOCALS          shift and go to state 71


state 70
